infra/terraform/azure/jenkins/modules/firewall/nsg_subnet_association.tf
resource "azurerm_subnet_network_security_group_association" "this" {
  subnet_id                 = var.subnet_id
  network_security_group_id = azurerm_network_security_group.this.id
}
